syntax = "proto3";

package tensorflow.embedding;

enum StorageType {
  // none
  INVALID = 0;

  // one level
  DRAM = 1;
  PMEM = 2;
  SSD = 3;

  LEVELDB = 14;
/*
  // two level
  DRAM_PMEM = 11;
  DRAM_SSD = 12;
  HBM_DRAM = 13;

  // three level
  DRAM_PMEM_SSD = 101;
  HBM_DRAM_SSD = 102;
*/
}
